--- a/index.html
+++ b/index.html
@@ -97,6 +97,17 @@
 						<div class="cd-slider-content">
 							<div class="content-wrapper">
 								<h2>Цель и задачи исследования</h2>
+										<div class="row">
+													<div class="col-xs-10 maintext">
+													<h3>Цель исследования:</h3>				
+													Анализ проблем безопасности HTML5 и написание рекомендаций по их устранению или предотвращению
+													<h3>Задачи исследования:</h3>							
+														  Определение основных проблем безопасности HTML5</br>
+														  Проведение анализа этих проблем</br>
+														  Написание рекомендаций</br>															
+												    </div>
+										</div>
+									</div>
 							</div>
 						</div>
 					</li>
