--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 									<div class="col-md-12 mytext1">
 									<img src="img\2page.png" alt="2 page" height="100%" width="100%">
 									</div>
-									<div class="col-md-12 mybot"><p></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>Страница 2</p></div>
+									<div class="col-md-12 mybot"><p></br>Страница 2</p></div>
 								</div>
 								</div>
 
