--- a/index.html
+++ b/index.html
@@ -126,7 +126,23 @@
 			<li id="slide-4">
 				<div class="cd-slider-content">
 					<div class="content-wrapper">
-						<h2>Slider #4</h2>
+					<ol class="sub-slides">
+					<li>
+						<div class="cd-slider-content">
+							<div class="content-wrapper">
+								<h2>Основные проблемы 1/2</h2>
+							</div>
+						</div>
+					</li>
+					
+					<li>
+						<div class="cd-slider-content">
+							<div class="content-wrapper">
+								<h2>Основные проблемы 2/2</h2>
+							</div>
+						</div>
+					</li>
+				</ol>
 					</div>
 				</div>
 			</li>
@@ -134,7 +150,31 @@
 			<li id="slide-5">
 				<div class="cd-slider-content">
 					<div class="content-wrapper">
-						<h2>Slider #5</h2>
+								<ol class="sub-slides">
+								<li>
+									<div class="cd-slider-content">
+										<div class="content-wrapper">
+											<h2>Эксперименты с безопасностью 1/3</h2>
+										</div>
+									</div>
+								</li>
+								
+								<li>
+									<div class="cd-slider-content">
+										<div class="content-wrapper">
+											<h2>Эксперименты с безопасностью 2/3</h2>
+										</div>
+									</div>
+								</li>
+							</ol>
+							<li>
+									<div class="cd-slider-content">
+										<div class="content-wrapper">
+											<h2>Эксперименты с безопасностью 3/3</h2>
+										</div>
+									</div>
+								</li>
+							</ol>
 					</div>
 				</div>
 			</li>
@@ -144,7 +184,7 @@
 					<li>
 						<div class="cd-slider-content">
 							<div class="content-wrapper">
-								<h2>Slider #6</h2>
+								<h2>Рекомендации для пользователей</h2>
 							</div>
 						</div>
 					</li>
@@ -152,7 +192,7 @@
 					<li>
 						<div class="cd-slider-content">
 							<div class="content-wrapper">
-								<h2>Slider #6 - Sub #1</h2>
+								<h2>Рекомендации для разработчиков браузеров</h2>
 							</div>
 						</div>
 					</li>
@@ -160,7 +200,7 @@
 					<li>
 						<div class="cd-slider-content">
 							<div class="content-wrapper">
-								<h2>Slider #6 - Sub #2</h2>
+								<h2>Рекомендации для web разработчиков</h2>
 							</div>
 						</div>
 					</li>
