--- a/index.html
+++ b/index.html
@@ -107,28 +107,19 @@
 			</li>
 
 			<li id="slide-3">
-				<div class="cd-slider-content">
-					<div class="content-wrapper">
-								<div class="row">
-								<div class="container">
-									<div class="col-md-12 mytitle"><h2>Актуальность</br></h2></div>
-									<div class="col-md-12 mytext1">
-									<img src="img\2page.png" alt="2 page" height="100%" width="100%">
-									</div>
-									<div class="col-md-12 mybot"><p></br>Страница 2</p></div>
-								</div>
-								</div>
-
-					</div>
-				</div>
-			</li>
-
-			<li id="slide-4">
 				<ol class="sub-slides">
 					<li>
 						<div class="cd-slider-content">
 							<div class="content-wrapper">
-								<h2>Основные проблемы 1/2</h2>
+								<div class="row">
+								<div class="container">
+									<div class="col-md-12 mytitle"><h2>Актуальность 1/2</br></h2></div>
+									<div class="col-md-12 mytext1">
+									<img src="img\2page2.png" alt="2 page" height="100%" width="100%">
+									</div>
+									<div class="col-md-12 mybot"><p></br></br></br></br></br>Страница 2</p></div>
+								</div>
+								</div>
 							</div>
 						</div>
 					</li>
@@ -136,12 +127,43 @@
 					<li>
 						<div class="cd-slider-content">
 							<div class="content-wrapper">
-								<h2>Основные проблемы 2/2</h2>
+								<div class="row">
+								<div class="container">
+									<div class="col-md-12 mytitle"><h2>Актуальность 2/2</br></h2></div>
+									<div class="col-md-12 mytext1">
+									<img src="img\2page.png" alt="2 page" height="80%" width="100%">
+									</div>
+									<div class="col-md-12 mybot"><p></br>Страница 3</p></div>
+								</div>
+								</div>
 							</div>
 						</div>
 					</li>
-
-				</ol> <!-- .sub-slides -->
+				</ol> <!-- .sub-slides -->			
+			</li>
+			<li id="slide-4">
+					<ol class="sub-slides">
+					<li>
+						<div class="cd-slider-content">
+							<div class="content-wrapper">
+								<div class="row">
+								<div class="container">
+									<div class="col-md-12 mytitle"><h2>Основные проблемы безопасности</br></h2></div>
+									<div class="col-md-12 mytext1">
+									<p>Межсайтовый скриптинг</p>
+									<p>Манипуляция хранилищем данных на стороне клиента</p>
+									<p>Ботнеты на основе браузера</p>
+									<p>Сканирование сети</p>
+									<p>Атаки с использованием векторной графики (SVG)</p>
+									<p>Внедрение кода через iframe и файлы изображений</p>
+									</div>
+									<div class="col-md-12 mybot"><p></br></br></br></br></br>Страница 4</p></div>
+								</div>
+								</div>
+							</div>
+						</div>
+					</li>
+				</ol> <!-- .sub-slides -->		
 			</li>
 
 			<li id="slide-5">
