--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
               <h5 class="card-title">Философия</h5>
               <h6 class="card-subtitle mb-2 text-muted">Семестр 1</h6>
               <p class="card-text">...</p>
-              <a href="https://bootsnipp.com/pradeep330" id="A_1">pdf</a>
-              <a href="http://websitedesigntamilnadu.com" class="card-link">html</a>
+              <a href="https://bootsnipp.com/pradeep330" class="btn btn-outline-primary">pdf</a>
+              <a href="http://websitedesigntamilnadu.com" class="btn btn-outline-primary">html</a>
             </div>
           </div>
         </div>
