--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="card-body">
               <h5 class="card-title">Философия</h5>
               <h6 class="card-subtitle mb-2 text-muted">Семестр 1</h6>
-              <p class="card-text">...</p>
+              <p class="card-text">Все лекции:</p>
               <a href="https://bootsnipp.com/pradeep330" class="btn btn-outline-primary">pdf</a>
               <a href="http://websitedesigntamilnadu.com" class="btn btn-outline-primary">html</a>
             </div>
@@ -23,10 +23,10 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Экономика</h5>
-              <h6 class="card-subtitle mb-2 text-muted">...</h6>
-              <p class="card-text">...</p>
-              <a href="http://heyzi.github.io/sem1/econ.pdf" class="card-link">pdf</a>
-              <a href="http://heyzi.github.io/sem1/econ.html" class="card-link">html</a>
+              <h6 class="card-subtitle mb-2 text-muted">Семестр 1</h6>
+              <p class="card-text">Все лекции:</p>
+              <a href="http://heyzi.github.io/sem1/econ.pdf" class="btn btn-outline-primary">pdf</a>
+              <a href="http://heyzi.github.io/sem1/econ.html" class="btn btn-outline-primary">html</a>
             </div>
           </div>
         </div>
@@ -34,10 +34,10 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">ФК</h5>
-              <h6 class="card-subtitle mb-2 text-muted">...</h6>
-              <p class="card-text">...</p>
-              <a href="https://bootsnipp.com/pradeep330" class="card-link">pdf</a>
-              <a href="http://websitedesigntamilnadu.com" class="card-link">html</a>
+              <h6 class="card-subtitle mb-2 text-muted">Семестр 1</h6>
+              <p class="card-text">Все лекции:</p>
+              <a href="https://bootsnipp.com/pradeep330" class="btn btn-outline-primary">pdf</a>
+              <a href="http://websitedesigntamilnadu.com" class="btn btn-outline-primary">html</a>
             </div>
           </div>
         </div>
@@ -46,9 +46,9 @@
             <div class="card-body">
               <h5 class="card-title">Try Other</h5>
               <h6 class="card-subtitle mb-2 text-muted">...</h6>
-              <p class="card-text">...</p>
-              <a href="https://bootsnipp.com/pradeep330" class="card-link">pdf</a>
-              <a href="http://websitedesigntamilnadu.com" class="card-link">html</a>
+              <p class="card-text">Все лекции:</p>
+              <a href="https://bootsnipp.com/pradeep330" class="btn btn-outline-primary">pdf</a>
+              <a href="http://websitedesigntamilnadu.com" class="btn btn-outline-primary">html</a>
             </div>
           </div>
         </div>
@@ -58,8 +58,8 @@
               <h5 class="card-title">Try Other</h5>
               <h6 class="card-subtitle mb-2 text-muted">...</h6>
               <p class="card-text">...</p>
-              <a href="https://bootsnipp.com/pradeep330" class="card-link">pdf</a>
-              <a href="http://websitedesigntamilnadu.com" class="card-link">html</a>
+              <a href="https://bootsnipp.com/pradeep330" class="btn btn-outline-primary">pdf</a>
+              <a href="http://websitedesigntamilnadu.com" class="btn btn-outline-primary">html</a>
             </div>
           </div>
         </div>
