--- a/index.html
+++ b/index.html
@@ -65,6 +65,50 @@
             </div>
           </div>
         </div>
+				<div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Try Other</h5>
+              <h6 class="card-subtitle mb-2 text-muted">...</h6>
+              <p class="card-text">...</p>
+              <a href="https://bootsnipp.com/pradeep330" class="btn btn-outline-primary">pdf</a>
+              <a href="http://websitedesigntamilnadu.com" class="btn btn-outline-primary">html</a>
+            </div>
+          </div>
+        </div>
+				<div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Try Other</h5>
+              <h6 class="card-subtitle mb-2 text-muted">...</h6>
+              <p class="card-text">...</p>
+              <a href="https://bootsnipp.com/pradeep330" class="btn btn-outline-primary">pdf</a>
+              <a href="http://websitedesigntamilnadu.com" class="btn btn-outline-primary">html</a>
+            </div>
+          </div>
+        </div>
+				<div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Try Other</h5>
+              <h6 class="card-subtitle mb-2 text-muted">...</h6>
+              <p class="card-text">...</p>
+              <a href="https://bootsnipp.com/pradeep330" class="btn btn-outline-primary">pdf</a>
+              <a href="http://websitedesigntamilnadu.com" class="btn btn-outline-primary">html</a>
+            </div>
+          </div>
+        </div>
+				<div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Try Other</h5>
+              <h6 class="card-subtitle mb-2 text-muted">...</h6>
+              <p class="card-text">...</p>
+              <a href="https://bootsnipp.com/pradeep330" class="btn btn-outline-primary">pdf</a>
+              <a href="http://websitedesigntamilnadu.com" class="btn btn-outline-primary">html</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
