--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               <p class="card-text">Все лекции:</p>
               <a href="http://heyzi.github.io/sem1/phil.pdf" class="btn btn-outline-primary">pdf</a>
               <a href="http://heyzi.github.io/sem1/phil.html" class="btn btn-outline-primary">html</a>
-			  <p class="card-text">Философия в таблицах с схемах</p>
+			  <p class="card-text">Философия в таблицах с схемах:</p>
               <a href="http://heyzi.github.io/sem1/phil_tab.pdf" class="btn btn-outline-primary">pdf</a>
             </div>
           </div>
