--- a/index.html
+++ b/index.html
@@ -54,61 +54,56 @@
             </div>
           </div>
         </div>
-		<div class="col">
+				
+      </div>
+	   <div class="row">
+        <div class="col">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Try Other</h5>
-              <h6 class="card-subtitle mb-2 text-muted">...</h6>
-              <p class="card-text">...</p>
+              <h5 class="card-title">Философия</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Семестр 1</h6>
+              <p class="card-text">Все лекции:</p>
+              <a href="http://heyzi.github.io/sem1/phil.pdf" class="btn btn-outline-primary">pdf</a>
+              <a href="http://heyzi.github.io/sem1/phil.html" class="btn btn-outline-primary">html</a>
+			  <p class="card-text">Философия в таблицах с схемах:</p>
+              <a href="http://heyzi.github.io/sem1/phil_tab.pdf" class="btn btn-outline-primary">pdf</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Экономика</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Семестр 1</h6>
+              <p class="card-text">Все лекции:</p>
+              <a href="http://heyzi.github.io/sem1/econ.pdf" class="btn btn-outline-primary">pdf</a>
+              <a href="http://heyzi.github.io/sem1/econ.html" class="btn btn-outline-primary">html</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">ФК</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Семестр 1</h6>
+              <p class="card-text">Все лекции:</p>
               <a href="https://bootsnipp.com/pradeep330" class="btn btn-outline-primary">pdf</a>
               <a href="http://websitedesigntamilnadu.com" class="btn btn-outline-primary">html</a>
             </div>
           </div>
         </div>
-				<div class="col">
+        <div class="col">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Try Other</h5>
               <h6 class="card-subtitle mb-2 text-muted">...</h6>
-              <p class="card-text">...</p>
+              <p class="card-text">Все лекции:</p>
               <a href="https://bootsnipp.com/pradeep330" class="btn btn-outline-primary">pdf</a>
               <a href="http://websitedesigntamilnadu.com" class="btn btn-outline-primary">html</a>
             </div>
           </div>
         </div>
-				<div class="col">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Try Other</h5>
-              <h6 class="card-subtitle mb-2 text-muted">...</h6>
-              <p class="card-text">...</p>
-              <a href="https://bootsnipp.com/pradeep330" class="btn btn-outline-primary">pdf</a>
-              <a href="http://websitedesigntamilnadu.com" class="btn btn-outline-primary">html</a>
-            </div>
-          </div>
-        </div>
-				<div class="col">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Try Other</h5>
-              <h6 class="card-subtitle mb-2 text-muted">...</h6>
-              <p class="card-text">...</p>
-              <a href="https://bootsnipp.com/pradeep330" class="btn btn-outline-primary">pdf</a>
-              <a href="http://websitedesigntamilnadu.com" class="btn btn-outline-primary">html</a>
-            </div>
-          </div>
-        </div>
-				<div class="col">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Try Other</h5>
-              <h6 class="card-subtitle mb-2 text-muted">...</h6>
-              <p class="card-text">...</p>
-              <a href="https://bootsnipp.com/pradeep330" class="btn btn-outline-primary">pdf</a>
-              <a href="http://websitedesigntamilnadu.com" class="btn btn-outline-primary">html</a>
-            </div>
-          </div>
-        </div>
+				
       </div>
     </div>
   </div>
