--- a/index.html
+++ b/index.html
@@ -46,11 +46,33 @@
         <div class="col">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Try Other</h5>
+              <h5 class="card-title">ТПЭФМ</h5>
               <h6 class="card-subtitle mb-2 text-muted">...</h6>
               <p class="card-text">Все лекции:</p>
-              <a href="http://heyzi.github.io/sem1/phis.pdf" class="btn btn-outline-primary">pdf</a>
-              <a href="http://heyzi.github.io/sem1/phis.html" class="btn btn-outline-primary">html</a>
+              <a href="http://heyzi.github.io/sem1/tpefm.pdf" class="btn btn-outline-primary">pdf</a>
+              <a href="http://heyzi.github.io/sem1/tpefm.html" class="btn btn-outline-primary">html</a>
+            </div>
+          </div>
+        </div>
+		   <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">ДКвБ</h5>
+              <h6 class="card-subtitle mb-2 text-muted">...</h6>
+              <p class="card-text">Все лекции:</p>
+              <a href="#" class="btn btn-outline-primary">pdf</a>
+              <a href="#" class="btn btn-outline-primary">html</a>
+            </div>
+          </div>
+        </div>
+		        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Иностранный язык</h5>
+              <h6 class="card-subtitle mb-2 text-muted">...</h6>
+              <p class="card-text">Все лекции:</p>
+              <a href="#" class="btn btn-outline-primary">pdf</a>
+              <a href="#" class="btn btn-outline-primary">html</a>
             </div>
           </div>
         </div>
