--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
               <h5 class="card-title">Философия</h5>
               <h6 class="card-subtitle mb-2 text-muted">Семестр 1</h6>
               <p class="card-text">Все лекции:</p>
-              <a href="http://heyzi.github.io/sem1/phil.pdf" class="btn btn-outline-primary">pdf</a>
-              <a href="http://heyzi.github.io/sem1/phil.html" class="btn btn-outline-primary">html</a>
+              <a href="http://heyzi.github.io/sem1/phil.pdf" target="_blank" class="btn btn-outline-primary">pdf</a>
+              <a href="http://heyzi.github.io/sem1/phil.html" target="_blank" class="btn btn-outline-primary">html</a>
 			  <p class="card-text">Философия в таблицах с схемах:</p>
-              <a href="http://heyzi.github.io/sem1/phil_tab.pdf" class="btn btn-outline-primary">pdf</a>
+              <a href="http://heyzi.github.io/sem1/phil_tab.pdf" target="_blank" class="btn btn-outline-primary">pdf</a>
             </div>
           </div>
         </div>
@@ -27,8 +27,8 @@
               <h5 class="card-title">Экономика</h5>
               <h6 class="card-subtitle mb-2 text-muted">Семестр 1</h6>
               <p class="card-text">Все лекции:</p>
-              <a href="http://heyzi.github.io/sem1/econ.pdf" class="btn btn-outline-primary">pdf</a>
-              <a href="http://heyzi.github.io/sem1/econ.html" class="btn btn-outline-primary">html</a>
+              <a href="http://heyzi.github.io/sem1/econ.pdf" target="_blank" class="btn btn-outline-primary">pdf</a>
+              <a href="http://heyzi.github.io/sem1/econ.html" target="_blank" class="btn btn-outline-primary">html</a>
             </div>
           </div>
         </div>
@@ -38,8 +38,8 @@
               <h5 class="card-title">ФК</h5>
               <h6 class="card-subtitle mb-2 text-muted">Семестр 1</h6>
               <p class="card-text">Все лекции:</p>
-              <a href="http://heyzi.github.io/sem1/phis.pdf" class="btn btn-outline-primary">pdf</a>
-              <a href="http://heyzi.github.io/sem1/phis.html" class="btn btn-outline-primary">html</a>
+              <a href="http://heyzi.github.io/sem1/phis.pdf" target="_blank" class="btn btn-outline-primary">pdf</a>
+              <a href="http://heyzi.github.io/sem1/phis.html" target="_blank" class="btn btn-outline-primary">html</a>
             </div>
           </div>
         </div>
@@ -49,8 +49,8 @@
               <h5 class="card-title">ТПЭФМ</h5>
               <h6 class="card-subtitle mb-2 text-muted">...</h6>
               <p class="card-text">Все лекции:</p>
-              <a href="http://heyzi.github.io/sem1/tpefm.pdf" class="btn btn-outline-primary">pdf</a>
-              <a href="http://heyzi.github.io/sem1/tpefm.html" class="btn btn-outline-primary">html</a>
+              <a href="http://heyzi.github.io/sem1/tpefm.pdf" target="_blank" class="btn btn-outline-primary">pdf</a>
+              <a href="http://heyzi.github.io/sem1/tpefm.html" target="_blank" class="btn btn-outline-primary">html</a>
             </div>
           </div>
         </div>
@@ -60,8 +60,8 @@
               <h5 class="card-title">ДКвБ</h5>
               <h6 class="card-subtitle mb-2 text-muted">...</h6>
               <p class="card-text">Все лекции:</p>
-              <a href="#" class="btn btn-outline-primary">pdf</a>
-              <a href="#" class="btn btn-outline-primary">html</a>
+              <a href="#" target="_blank" class="btn btn-outline-primary">pdf</a>
+              <a href="#" target="_blank" class="btn btn-outline-primary">html</a>
             </div>
           </div>
         </div>
@@ -71,8 +71,8 @@
               <h5 class="card-title">Иностранный язык</h5>
               <h6 class="card-subtitle mb-2 text-muted">...</h6>
               <p class="card-text">Все лекции:</p>
-              <a href="#" class="btn btn-outline-primary">pdf</a>
-              <a href="#" class="btn btn-outline-primary">html</a>
+              <a href="#" target="_blank" class="btn btn-outline-primary">pdf</a>
+              <a href="#" target="_blank" class="btn btn-outline-primary">html</a>
             </div>
           </div>
         </div>
