--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
               <p class="card-text">Все лекции:</p>
               <a href="http://heyzi.github.io/sem1/econ.pdf" target="_blank" class="btn btn-outline-primary">pdf</a>
               <a href="http://heyzi.github.io/sem1/econ.html" target="_blank" class="btn btn-outline-primary">html</a>
+			  <p class="card-text">Ответы на тесты 01-10:</p>
+              <a href="http://heyzi.github.io/sem1/eco_test10.html" target="_blank" class="btn btn-outline-primary">html</a>
             </div>
           </div>
         </div>
