--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <p class="card-text">Все лекции:</p>
               <a href="http://heyzi.github.io/sem1/econ.pdf" target="_blank" class="btn btn-outline-primary">pdf</a>
               <a href="http://heyzi.github.io/sem1/econ.html" target="_blank" class="btn btn-outline-primary">html</a>
-			  <p class="card-text">Ответы на тесты 01-10:</p>
+			  <p class="card-text">Ответы на тесты:</p>
               <a href="http://heyzi.github.io/sem1/eco_test10.html" target="_blank" class="btn btn-outline-primary">html</a>
             </div>
           </div>
