--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
               <p class="card-text">Все лекции:</p>
               <a href="#" target="_blank" class="btn btn-outline-primary">pdf</a>
               <a href="#" target="_blank" class="btn btn-outline-primary">html</a>
+			  <p class="card-text">Ответы на тесты:</p>
+			  <a href="http://heyzi.github.io/sem1/dkvb_tests.html" target="_blank" class="btn btn-outline-primary">html</a>
+			  <p class="card-text">Ответы на финальный тест:</p>
+			  <a href="http://heyzi.github.io/sem1/dkvb_final.html" target="_blank" class="btn btn-outline-primary">html</a>
             </div>
           </div>
         </div>
